tests-e2e/tests/snapshots/cli__unknown_compile_flag.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [unknown_flag] · command line:1:14
  •
  │
  • unexpected argument '--unknown' found
  │
  │ Usage: iris compile [FLAGS] [INPUT]…
  │
  │ For more information, try '--help'.
  │
  │   iris compile --unknown Main.purs
  │                ╰────────
  •
