tests-e2e/tests/snapshots/cli__unknown_docs_flag.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [unknown_flag] · command line:1:11
  •
  │
  • unexpected argument '--unknown' found
  │
  │ Usage: iris docs [FLAGS] [SUBCOMMAND]
  │
  │ For more information, try '--help'.
  │
  │   iris docs --unknown --package .
  │             ╰────────
  •
