tests-e2e/tests/snapshots/cli__unknown_root_flag.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [unknown_flag] · command line:1:6
  •
  │
  • unexpected argument '--unknown' found
  │
  │ Usage: iris [--log-file] <SUBCOMMAND>
  │
  │ For more information, try '--help'.
  │
  │   iris --unknown
  │        ╰────────
  •
