tests-e2e/tests/snapshots/cli__unknown_typescript_flag.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [unknown_flag] · command line:1:22
  •
  │
  • unexpected argument '--unknown' found
  │
  │ Usage: iris docs typescript [--output <DIR>]
  │
  │ For more information, try '--help'.
  │
  │   iris docs typescript --unknown
  │                        ╰────────
  •
